<resources>
    <string name="app_name">College</string>
    <string name="add">Create new schedule</string>
    <string name="classNameInputLabel">Enter Class Name</string>
    <string name="professorNameInputLabel">Enter Professor Name</string>
    <string name="classIdInputLabel">Enter Class ID</string>
    <string name="daysSpinnerLabel">Select day of week</string>
    <string name="addClassButtonLabel">Create Class</string>
    <string name="random">random text</string>
    <string name="textSize">17sp</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">View Class Data in Widget</string>
</resources>