<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:gravity="center"
    android:layout_margin="20dp"
    android:orientation="vertical">

        <EditText
            android:id="@+id/classNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/classNameInputLabel"
            android:ems="10"
            android:hint="@string/classNameInputLabel"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="15dp"
            tools:ignore="TextContrastCheck"
            />

        <EditText
            android:id="@+id/professorNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/professorNameInputLabel"
            android:ems="10"
            android:hint="@string/professorNameInputLabel"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="15dp"
            tools:ignore="TextContrastCheck" />
        <EditText
            android:id="@+id/classIdInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/classIdInputLabel"
            android:ems="10"
            android:hint="@string/classIdInputLabel"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="15dp"
            tools:ignore="TextContrastCheck" />

        <Spinner
            android:id="@+id/daySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/daysSpinnerLabel"
            tools:ignore="TouchTargetSizeCheck"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                <TextView
                    android:id="@+id/startTimeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="Start Time:" />

                <TimePicker
                    android:id="@+id/startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:timePickerMode="spinner" />
        </LinearLayout>

        <Button
            android:id="@+id/addClassButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginVertical="30dp"
            android:onClick="addClass"
            android:text="@string/addClassButtonLabel" />

</LinearLayout>